fixtures/cs-enc-03/bad/bf-cipheriv.ts
import { createCipheriv } from "crypto";
export function encrypt(data: Buffer, key: Buffer, iv: Buffer) {
	return createCipheriv("bf", key, iv);
}
